<resources>
    <string name="app_name">"BlazeChat "</string>
    <string name="facebook_application_id" translatable="false">431062297247349</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="enter_image_profie">Enter your information and take a photo which will be visible on your profile.</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Churchblaze messenger!</string>
    <string name="slide_1_desc">The easiest way to connect, share &amp; chat!</string>

    <string name="slide_2_title">Join your Church members</string>
    <string name="slide_2_desc">Select your church &amp; and begin connecting ASAP!</string>

    <string name="slide_3_title">Chat directly with fellow members</string>
    <string name="slide_3_desc">Start private chat with a church member!</string>

    <string name="slide_4_title">Members</string>
    <string name="slide_4_desc">Start group chats with fellow church members!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
